# Eidolon-Soul-For-Hermes-Agent-Universal

./: .gitignore  .sanitize-patterns.yml  .zenodo.json  ACKNOWLEDGMENTS.md  CHANGELOG.md  CITATION.cff  Eidolon Version 3.0 public release.md  GROK_BRIEF.md  MANIFEST.in  NOTICE  OPERATOR.md  PHILOSOPHY.md  README.md  RELEASING.md  SOUL.md  install.sh  master_EIDOLON_roadmap(F5).md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: adversarial.yml  homebrew-tap-update.yml  installer-test.yml  nightly-eval.yml  release.yml  sanitize.yml
docs/: EIDOLON_OUTPUT_GATE_BRIEF.md  citing.md  compatibility.md  dashboard.html  eval.md  install-brew.md  install.md  judgment-brain.md  mcp.md  memory-adapter.md  risk-model.md  skill-lifecycle.md
packaging/homebrew/: eidolon.rb
scripts/: eidolon-nightly-monitor.py  sanitize_check.py
skills/dream-cycle/: SKILL.md  handler.py
skills/integrity-watchdog/: SKILL.md  handler.py
src/eidolon/: __init__.py  __main__.py  _version.py  cli.py  hermes_bridge.py  outbox.py
tests/: TESTPLAN.md  adversarial.py
tests/eval/: nightly.py  regression_suite.py
tests/integration/: test_mcp_client.py
tests/unit/: _tmphomes.py  conftest.py  test_arms.py  test_bandit.py  test_citation_cff.py  test_cli.py  test_doctor.py  test_dream_memory_adapter.py  test_dream_metrics_record.py  test_dream_outbox_wiring.py  test_hermes_bridge.py  test_hermes_version.py  test_homebrew_formula.py  test_installer_smoke.py  test_judgment.py  test_learn_command.py  test_mcp_server.py  test_mcp_tools_hindsight.py  test_memory_adapter.py  test_nightly_eval.py  test_outbox.py  (+19 more)
(+73 files in other folders)
