[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eidolon-hermes"
dynamic = ["version"]
description = "Self-improvement layer for Hermes Agent — installs loud, degrades loud, never silently no-ops."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Eidolon Contributors" }]
keywords = ["hermes", "agent", "self-improvement", "reinforcement-learning", "llm", "eidolon"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
]

# Stdlib-first policy: zero runtime dependencies. Any addition requires a PR
# with explicit justification (see CONTRIBUTING.md, once written).
dependencies = []

[project.urls]
Homepage = "https://github.com/shagghiesuperstar/Eidolon-Soul-For-Hermes-Agent-Universal"
Issues = "https://github.com/shagghiesuperstar/Eidolon-Soul-For-Hermes-Agent-Universal/issues"

[project.scripts]
eidolon = "eidolon.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["eidolon*"]

[tool.setuptools.dynamic]
version = { attr = "eidolon._version.__version__" }
